# docsorter

./: .gitattributes  .gitignore  LICENSE  README.md  example.config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/docsorter/: __init__.py  cli.py  config.py  core.py  detectors.py  mover.py  report.py
